@@ -1,3 +1,9 @@
+2009-07-01  higepon  <higepon@users.sourceforge.jp>
+
+        * Equivalent.h : Added fast equal?.
+          Efficient Nondestructive Equality Checking for Trees and Graphs
+          Michael D. Adams and R. Kent Dybvig
+          ICFP 2008
 2009-06-30  higepon  <higepon@users.sourceforge.jp>
 
         * lib/mosh/ffi.ss: Added new FFI documents.
